plang/testing/logs/false-incorrect/99/program99.p.p
ep (uR7Z (ytcB v3 (q T9 (Aa)) f (ZY))) (RXF) anG (SCw3) :- ((rP0 (msbt (Nfw) (sm (Xog) DiY (ls (u flUSX (g8 yNL (yaC b4 uKhh) DI4Fa) cJGK) (h A2 (o (saC (kEr (sBH m22gv kHUvr n) e1WoF) (LZuG) A9KY)) TA1GB ja) (XQ))) R9 w3bx2) (JRPK), dUX (W) (av420 vVl0r), mIu LO5n S (VYja)); ((x13 ilkn; bMuw RrTTr (ZxZZ6)))).

zOiP (Qf) (pijpe s0 (ONN)) (C) :- (gCRKQ (EXf3) vG43s, bQ4lc (DmYTX); (c6 (P) zmg); v04, cID (RjtV) (WPVzR), o U (x7E (eZsWm) (B1)) (G) Oa, (mW JLXL (mFCN (N)) (wUS) hM), nPV6 V (nKNL1 hA), xkTS4 vV lx2 j6).

v WV (BW) :- (iy9 (A) wu; k, tvy S g (EMN), cw7i Sh jpN; bEbFj UR (f) Ecs (HU)).


s1Ow (ToFfs) (AZ0) sfLw (b Ko9Jr (s (V)) (U67e) RxW).

n6V.

? qis3 (m6r lAwZo (ea ev) cw) (cs7 (QXq)) ln8e, k; n45T (r (w6f W) (ZLH44)) (Q) (Ql), gqF lR (B0jY) Xqc9, (vJ ppdyp; t7JpV); d (H2) ezQ; wnGUw Nw (cnOy rd (yIm)) (FgrE) (DM), (r (sFM5f) (HNqxk) (T7LT) (kFPO3)); aCok4 junC; j zqM M (rRWf Gsgx).

